--- a/.github/workflows/bb.yml
+++ b/.github/workflows/bb.yml
@@ -64,12 +64,11 @@ jobs:
           network: |
             [
               {
-                "chainId": 1,
-                "blockNumber": 12000000 // Optional block number
+                "chainId": 21524
               },
               {
                 "chainId": 10
               }
             ]
-          deploy-command: "make deploy"
-          buildbear-token: ${{ secrets.BUILDBEAR_TOKEN }}
+          deployCmd: "make deploy"
+          buildbear_token: ${{ secrets.BUILDBEAR_TOKEN }}
