--- a/.github/workflows/bb.yml
+++ b/.github/workflows/bb.yml
@@ -61,6 +61,8 @@ jobs:
 
       - name: Run BB Action CI
         uses: BuildBearLabs/buildbear_x_action@v1.3.0
+        env:
+          HARDHAT_IGNITION_CONFIRM_DEPLOYMENT: false
         with:
           network: |
             [
