Add dynamic BB network for CI/CD

--- a/.github/workflows/bb.yml
+++ b/.github/workflows/bb.yml
@@ -70,5 +70,5 @@ jobs:
                 "chainId": 10
               }
             ]
-          deploy-command: "npx hardhat ignition deploy ./ignition/modules/Auction.ts --network buildbear"
+          deploy-command: "npx hardhat ignition deploy ./ignition/modules/Auction.ts --network buildbear_ci"
           buildbear-token: ${{ secrets.BUILDBEAR_TOKEN }}
